--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py26, py27, py33, py34
+envlist = py26, py27, py34, py35, py36
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/pip-compile-multi
 commands = py.test
 deps =
-    -r{toxinidir}/requirements-dev.txt
+    -r{toxinidir}/requirements/test.txt
