--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py34, py35, py36
+envlist = py26, py27, py34, py35, py36, lint
 
 [testenv]
 setenv =
@@ -7,3 +7,7 @@ setenv =
 commands = py.test
 deps =
     -r{toxinidir}/requirements/test.txt
+
+[lint]
+commands = prospector lock.py test_lock.py
+deps = prospector
