--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,14 @@ universal=1
 
 [bdist_wheel]
 universal=1
+
+[bumpversion]
+current_version = 1.0.0
+
+[bumpversion:file:setup.py]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
+[bumpversion:file:pipcompilemulti.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
