--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ deps =
     -r{toxinidir}/requirements/test.txt
 
 [lint]
-commands = prospector lock.py test_lock.py
+commands = prospector pipcompilemulti.py test_pipcompilemulti.py
 deps = prospector
