--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26, py27, py34, py35, py36, lint
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/pip-compile-multi
-commands = py.test
+commands = pytest --doctest-modules pipcompilemulti.py test_pipcompilemulti.py
 deps =
     -r{toxinidir}/requirements/test.txt
 
