--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "3.5"
   - "3.4"
   - "2.7"
-  # - "2.6" not supported by pip and astroid
+  - "2.6"  # not supported by pip and astroid
   - "pypy"
 
 before_install:
