Add conflict tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, lint
+envlist = py27, py34, py35, py36, py37, lint, conflicts
+skip_missing_interpreters = true
 
 [testenv]
 setenv =
@@ -13,3 +14,6 @@ commands = prospector pipcompilemulti.py test_pipcompilemulti.py
 deps =
     prospector
     -r{toxinidir}/requirements/test.txt
+
+[testenv:conflicts]
+commands = /bin/sh test_conflicts.sh
