Fix tox lint config and uncovered prospector warnings

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ commands = pytest --doctest-modules pipcompilemulti.py test_pipcompilemulti.py
 deps =
     -r{toxinidir}/requirements/test.txt
 
-[lint]
+[testenv:lint]
 commands = prospector pipcompilemulti.py test_pipcompilemulti.py
-deps = prospector
+deps =
+    prospector
+    -r{toxinidir}/requirements/test.txt
