add checkdocs to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, lint, conflicts
+envlist = py27, py34, py35, py36, py37, lint, conflicts, checkdocs
 skip_missing_interpreters = true
 
 [testenv]
@@ -10,10 +10,18 @@ deps =
     -r{toxinidir}/requirements/test.txt
 
 [testenv:lint]
+skip_install = true
 commands = prospector pipcompilemulti.py test_pipcompilemulti.py
 deps =
     prospector
     -r{toxinidir}/requirements/test.txt
+
+[testenv:checkdocs]
+skip_install = true
+commands = python setup.py checkdocs
+deps =
+    collective.checkdocs
+    pygments
 
 [testenv:conflicts]
 commands = /bin/sh test_conflicts.sh
