add verify to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, lint, conflicts, checkdocs
+envlist = py27, py34, py35, py36, py37, lint, conflicts, checkdocs, verify
 skip_missing_interpreters = true
 
 [testenv]
@@ -22,6 +22,12 @@ commands = python setup.py checkdocs
 deps =
     collective.checkdocs
     pygments
+
+[testenv:verify]
+skip_install = true
+commands = pip-compile-multi verify
+deps =
+    pip-compile-multi
 
 [testenv:conflicts]
 commands = /bin/sh test_conflicts.sh
