add tox.ini snippet to README

--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,8 @@ deps =
 
 [testenv:verify]
 skip_install = true
+deps = pip-compile-multi
 commands = pip-compile-multi verify
-deps =
-    pip-compile-multi
 
 [testenv:conflicts]
 commands = /bin/sh test_conflicts.sh
