--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,31 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, lint, conflicts, checkdocs, verify
+envlist = py{27,34,35,36,37}-{linux,windows}, lint2, lint3, conflicts, checkdocs, verify
 skip_missing_interpreters = true
 
 [testenv]
+platform = linux: linux
+           windows: win32
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/pip-compile-multi
-commands = pytest --doctest-modules pipcompilemulti.py test_pipcompilemulti.py
+commands = python -m pytest --doctest-modules pipcompilemulti.py test_pipcompilemulti.py
 deps =
-    -r{toxinidir}/requirements/test.txt
+    linux: -r{toxinidir}/requirements/test.hash
+    windows: -r{toxinidir}/requirements/testwin.hash
+    py27: -r{toxinidir}/requirements/py27.hash
 
-[testenv:lint]
+[testenv:lint2]
 skip_install = true
+basepython=python2.7
 commands = prospector pipcompilemulti.py test_pipcompilemulti.py
 deps =
-    prospector
-    -r{toxinidir}/requirements/test.txt
+    -r{toxinidir}/requirements/local27.hash
+
+[testenv:lint3]
+skip_install = true
+basepython=python3.6
+commands = prospector pipcompilemulti.py test_pipcompilemulti.py
+deps =
+    -r{toxinidir}/requirements/local.hash
 
 [testenv:checkdocs]
 skip_install = true
@@ -24,9 +35,27 @@ deps =
     pygments
 
 [testenv:verify]
+skipsdist = true
 skip_install = true
+basepython = python3.6
 deps = pip-compile-multi
-commands = pip-compile-multi verify
+commands =
+    pip-compile-multi verify
+# pip-compile-multi verify -i txt -o hash
 
 [testenv:conflicts]
 commands = /bin/sh test_conflicts.sh
+
+[testenv:upgrade2]
+basepython = python2.7
+deps = pip-compile-multi
+commands =
+    pip-compile-multi -n py27 -n local27
+    pip-compile-multi -n py27 -n local27 -g py27 -g local27 -i txt -o hash
+
+[testenv:upgrade3]
+basepython = python3.6
+deps = pip-compile-multi
+commands =
+    pip-compile-multi -n local -n testwin
+    pip-compile-multi -n local -n testwin -g local -g testwin -i txt -o hash
