--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ platform = linux: linux
            windows: win32
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/pip-compile-multi
-commands = python -m pytest --doctest-modules pipcompilemulti.py test_pipcompilemulti.py
+commands = python -m pytest
 deps =
     linux: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
@@ -16,14 +16,18 @@ deps =
 [testenv:lint2]
 skip_install = true
 basepython=python2.7
-commands = prospector pipcompilemulti.py test_pipcompilemulti.py
+commands =
+    prospector pipcompilemulti
+    prospector tests
 deps =
     -r{toxinidir}/requirements/local27.hash
 
 [testenv:lint3]
 skip_install = true
 basepython=python3.6
-commands = prospector pipcompilemulti.py test_pipcompilemulti.py
+commands =
+    prospector pipcompilemulti
+    prospector tests
 deps =
     -r{toxinidir}/requirements/local.hash
 
@@ -59,3 +63,6 @@ deps = pip-compile-multi
 commands =
     pip-compile-multi -n local -n testwin
     pip-compile-multi -n local -n testwin -g local -g testwin -i txt -o hash
+
+[pytest]
+addopts = -vvvs --doctest-modules
