--- a/.pylintrc
+++ b/.pylintrc
@@ -325,7 +325,8 @@ good-names=i,
            Run,
            _,
            fp,
-           logger
+           logger,
+           options
 
 # Include a hint for the correct naming format with invalid-name
 include-naming-hint=no
