--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,5 +5,6 @@ include LICENSE
 include README.rst
 include requirements/base.in
 
+recursive-include pipcompilemulti
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
