--- a/requirements/local.in
+++ b/requirements/local.in
@@ -5,6 +5,6 @@ twine
 wheel
 bump2version
 prospector
-flake8
+flake8~=3.5.0  # waiting for prospector to catch up with pyflakes constraint
 collective.checkdocs
 pygments
