fix bumpversion config

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,10 +10,10 @@ universal = 1
 universal = 1
 
 [bumpversion:file:setup.py]
-search = version = "{current_version}"
-replace = version = "{new_version}"
+search = VERSION = "{current_version}"
+replace = VERSION = "{new_version}"
 
-[bumpversion:file:pipcompilemulti.py]
+[bumpversion:file:pipcompilemulti/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
