--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,34,35,36,37}-{linux,windows}, lint2, lint3, conflicts, checkdocs, verify
+envlist = py{27,34,35,36,37,py}-{linux,windows}, lint2, lint3, conflicts, checkdocs, verify
 skip_missing_interpreters = true
 
 [testenv]
@@ -11,14 +11,13 @@ commands = python -m pytest
 deps =
     linux: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
-    py27: -r{toxinidir}/requirements/py27.hash
+    pypy,py27: -r{toxinidir}/requirements/py27.hash
 
 [testenv:lint2]
 skip_install = true
 basepython=python2.7
 commands =
-    prospector pipcompilemulti
-    prospector tests
+    pylint -r y pipcompilemulti/ tests/
 deps =
     -r{toxinidir}/requirements/local27.hash
 
@@ -26,8 +25,7 @@ deps =
 skip_install = true
 basepython=python3.6
 commands =
-    prospector pipcompilemulti
-    prospector tests
+    pylint -r y pipcompilemulti/ tests/
 deps =
     -r{toxinidir}/requirements/local.hash
 
