--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ platform = linux: linux
            windows: win32
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/pip-compile-multi
-commands = python -m pytest
+commands = python -m pytest --cov=pipcompilemulti --cov-branch --cov-report=html
 deps =
     linux: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
