--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,12 @@ matrix:
       python: 3.6
       env: TOXENV=lint3
 
+before_install:
+  - pip install codecov
 install: pip install tox-travis
 script: tox
+after_success:
+  - codecov
 
 deploy:
   provider: pypi
