--- a/setup.cfg
+++ b/setup.cfg
@@ -19,23 +19,22 @@ replace = __version__ = '{new_version}'
 
 [requirements:Python 2]
 python = 2
-include_names = py27, local27
+only_names = py27, local27
 
 [requirements:Python 2 hash]
 python = 2
-include_names = py27, local27
-add_hashes = py27, local27
+only_names = py27, local27
+generate_hashes = py27, local27
 in_ext = txt
 out_ext = hash
 
 [requirements:Python 3]
 python = 3.4
-include_names = local, testwin
+only_names = local, testwin
 
 [requirements:Python 3 hash]
 python = 3.4
-include_names = local, testwin
-add_hashes = local, testwin
+only_names = local, testwin
+generate_hashes = local, testwin
 in_ext = txt
 out_ext = hash
-
