add Python2.7 backports for test dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ commands = python -m pytest --cov=pipcompilemulti --cov-branch --cov-report=html
 deps =
     linux: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
-    pypy,py27: -r{toxinidir}/requirements/py27.hash
+    pypy,py27: -r{toxinidir}/requirements/test27.hash
 
 [testenv:lint2]
 skip_install = true
@@ -49,8 +49,8 @@ commands =
 basepython = python2.7
 deps = pip-compile-multi
 commands =
-    pip-compile-multi -n py27 -n local27
-    pip-compile-multi -n py27 -n local27 -g py27 -g local27 -i txt -o hash
+    pip-compile-multi -n local27
+    pip-compile-multi -n local27 -g local27 -i txt -o hash
 
 [testenv:upgrade3]
 basepython = python3.6
