downgrade prospector and pydocstyle

--- a/requirements/local.in
+++ b/requirements/local.in
@@ -4,9 +4,10 @@ tox
 twine
 wheel
 bump2version
-prospector
+prospector<1
 flake8~=3.5.0  # waiting for prospector to catch up with pyflakes constraint
 collective.checkdocs
 pygments
 pre-commit
 pipdeptree
+pydocstyle<=3
