add py3.5 specific dependency

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     linux: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
     pypy,py27: -r{toxinidir}/requirements/test27.hash
+    py27,py35: -r{toxinidir}/requirements/test35.hash
 
 [testenv:lint2]
 skip_install = true
