whitelist pip-compile-multi

--- a/tox.ini
+++ b/tox.ini
@@ -42,9 +42,8 @@ skipsdist = true
 skip_install = true
 basepython = python3.6
 deps = pip-compile-multi
-commands =
-    pip-compile-multi verify
-# pip-compile-multi verify -i txt -o hash
+commands = pip-compile-multi verify
+whitelist_externals = pip-compile-multi
 
 [testenv:upgrade2]
 basepython = python2.7
