--- a/.pylintrc
+++ b/.pylintrc
@@ -128,7 +128,9 @@ disable=print-statement,
         dict-keys-not-iterating,
         dict-values-not-iterating,
         useless-object-inheritance,
-        no-else-return
+        no-else-return,
+        no-init,
+        old-style-class
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
