allow unsafe packages in hashed requirements

--- a/tox.ini
+++ b/tox.ini
@@ -50,14 +50,14 @@ basepython = python2.7
 deps = pip-compile-multi
 commands =
     pip-compile-multi -n local27
-    pip-compile-multi -n local27 -g local27 -i txt -o hash
+    pip-compile-multi -n local27 -g local27 -i txt -o hash --allow-unsafe
 
 [testenv:upgrade3]
 basepython = python3.6
 deps = pip-compile-multi
 commands =
     pip-compile-multi -n local -n testwin
-    pip-compile-multi -n local -n testwin -g local -g testwin -i txt -o hash
+    pip-compile-multi -n local -n testwin -g local -g testwin -i txt -o hash --allow-unsafe
 
 [pytest]
 addopts = -vvvs --doctest-modules
