--- a/tox.ini
+++ b/tox.ini
@@ -45,14 +45,18 @@ whitelist_externals = pip-compile-multi
 
 [testenv:upgrade2]
 basepython = python2.7
-deps = pip-compile-multi
+usedevelop = True
+deps =
+    -rrequirements/base.txt
+    -rrequirements/py27.txt
 commands =
     pip-compile-multi -n local27
     pip-compile-multi -n local27 -g local27 -i txt -o hash --allow-unsafe
 
 [testenv:upgrade3]
 basepython = python3.6
-deps = pip-compile-multi
+usedevelop = True
+deps = -rrequirements/base.txt
 commands =
     pip-compile-multi -n local -n testwin
     pip-compile-multi -n local -n testwin -g local -g testwin -i txt -o hash --allow-unsafe
