--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,6 @@ include LICENSE
 include README.rst
 include requirements/base.in
 
-recursive-include pipcompilemulti
+recursive-include pipcompilemulti *.py
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
