--- a/requirements/test.in
+++ b/requirements/test.in
@@ -2,6 +2,7 @@
 
 pytest ~= 4.6  # 4.6 is last to support Python2.7
 pytest-cov
-mock
+mock < 4  # 3 is the last to support Python 2.7
 six
 more-itertools < 6.0  # 6.0 dropped Python2.7 support
+zipp < 2  # 2.0 requires 3.6+
