--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -11,20 +11,17 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
       uses: actions/setup-python@v2
       with:
         python-version: 3.6
-    - name: Install dependencies
+    - name: Install tox
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements/test.txt
-        pip install -e .
+        pip install tox
     - name: Test with pytest
       run: |
-        pytest
+        tox
