--- a/requirements/local.in
+++ b/requirements/local.in
@@ -11,7 +11,7 @@ pygments < 3
 pre-commit < 2
 pipdeptree < 1
 pydocstyle < 4
-pylint != 1.9.5  # Missing for 3.7
+pylint != 1.9.5, < 2  # Missing for 3.7
 sphinx < 2  # Dropped Python 2.7 support
 
 # Constrain transitive dependencies:
