Drop Python 2.7 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,35,36,37,py}-{linux,windows}, lint2, lint3, checkdocs, verify
+envlist = py{36,37,38,py}-{linux,windows,darwin}, lint3, checkdocs, verify
 skip_missing_interpreters = true
 
 [testenv]
@@ -8,17 +8,10 @@ platform = linux: linux
 commands = python -m pytest --cov=pipcompilemulti --cov-branch --cov-report=html
 deps =
     linux: -r{toxinidir}/requirements/test.hash
+    darwin: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
     pypy,py27: -r{toxinidir}/requirements/test27.hash
     py27,py35: -r{toxinidir}/requirements/test35.hash
-
-[testenv:lint2]
-skip_install = true
-basepython=python2.7
-commands =
-    pylint -r y pipcompilemulti/ tests/
-deps =
-    -r{toxinidir}/requirements/local27.hash
 
 [testenv:lint3]
 skip_install = true
@@ -42,16 +35,6 @@ basepython = python3.6
 deps = pip-compile-multi
 commands = pip-compile-multi verify
 whitelist_externals = pip-compile-multi
-
-[testenv:upgrade2]
-basepython = python2.7
-usedevelop = True
-deps =
-    -rrequirements/base.txt
-    -rrequirements/py27.txt
-commands =
-    pip-compile-multi -n local27
-    pip-compile-multi -n local27 -g local27 -i txt -o hash --allow-unsafe
 
 [testenv:upgrade3]
 basepython = python3.6
