--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,py}-{linux,windows,darwin}, lint3, checkdocs, verify
+envlist = py{36,37,38,py3}-{linux,windows,darwin}, lint, checkdocs, verify
 skip_missing_interpreters = true
 
 [testenv]
@@ -10,10 +10,8 @@ deps =
     linux: -r{toxinidir}/requirements/test.hash
     darwin: -r{toxinidir}/requirements/test.hash
     windows: -r{toxinidir}/requirements/testwin.hash
-    pypy,py27: -r{toxinidir}/requirements/test27.hash
-    py27,py35: -r{toxinidir}/requirements/test35.hash
 
-[testenv:lint3]
+[testenv:lint]
 skip_install = true
 basepython=python3.6
 commands =
@@ -36,7 +34,7 @@ deps = pip-compile-multi
 commands = pip-compile-multi verify
 whitelist_externals = pip-compile-multi
 
-[testenv:upgrade3]
+[testenv:upgrade]
 basepython = python3.6
 usedevelop = True
 deps = -rrequirements/base.txt
