--- a/.github/workflows/pipcompilemulti.yml
+++ b/.github/workflows/pipcompilemulti.yml
@@ -1,27 +1,28 @@
 name: Update Dependencies
 on:
   schedule:
-    - cron:  '0 10 * * 1'
+    - cron: '0 10 * * 1'
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 2
-        uses: actions/setup-python@v2
-        with:
-          python-version: '2.7'
-      - name: Set up Python 3
+      - name: Set up Python 3.6
         uses: actions/setup-python@v2
         with:
           python-version: '3.6'
       - name: Install tox
         run: |
           python -m pip install --upgrade pip
-          pip install tox
+          pip install pip-compile-multi
       - name: Update dependencies
         run: |
-          tox -e upgrade2 -e upgrade3
+          pip-compile-multi
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v2
         with:
