--- a/.github/workflows/pipcompilemulti.yml
+++ b/.github/workflows/pipcompilemulti.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Install tox
         run: |
           python -m pip install --upgrade pip
-          pip install pip-compile-multi
+          pip install tox
       - name: Update dependencies
         run: |
-          pip-compile-multi
+          tox -e upgrade
       - name: Create commits
         run: |
           git config user.name 'pip-compile-multi'
@@ -32,11 +32,10 @@ jobs:
           head -n2 HISTORY.rst.tmp > HISTORY.rst
           rm HISTORY.rst.tmp
           date '+UNRELEASED (%Y-%m-%d)' >> HISTORY.rst
-          echo >> HISTORY.rst << EOF
-          -----------------------
-
-          * Update dependencies
-          EOF
+          echo '-----------------------' >> HISTORY.rst
+          echo '' >> HISTORY.rst
+          echo '* Update dependencies' >> HISTORY.rst
+          echo '' >> HISTORY.rst
           cat HISTORY.rst.tail >> HISTORY.rst
           rm HISTORY.rst.tail
           git commit -am "Update dependencies"
