--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,8 @@ basepython = python3.6
 usedevelop = True
 deps = -rrequirements/base.txt
 commands =
-    pip-compile-multi -n local -n testwin
-    pip-compile-multi -n local -n testwin -g local -g testwin -i txt -o hash --allow-unsafe
+    pip-compile-multi
+    pip-compile-multi -g local -i txt -o hash --allow-unsafe
 
 [pytest]
 addopts = -vvvs --doctest-modules
