--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
   include:
     - os: linux
       python: 3.6
-      env: TOXENV=lint3
+      env: TOXENV=lint
 
 before_install:
   - pip install codecov coveralls
