Auto-discover requirements in other dirs by following references

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,9 @@ include_names = local, testwin
 add_hashes = local, testwin
 in_ext = txt
 out_ext = hash
+
+[pycodestyle]
+max-line-length = 120
+
+[flake8]
+max-line-length = 120
