--- a/.github/workflows/pipcompilemulti.yml
+++ b/.github/workflows/pipcompilemulti.yml
@@ -2,7 +2,7 @@ name: Update Dependencies
 on:
   schedule:
     - cron: '15 15 * * 3'
-  workflow_dispatch
+  workflow_dispatch: {}
 
 jobs:
   build:
