--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Tox
 
 on:
   push:
@@ -15,10 +15,22 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.6'
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.7'
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
     - name: Install tox
       run: |
         python -m pip install --upgrade pip
-        pip install tox
-    - name: Test with pytest
+        python -m pip install tox
+    - name: Run tox
       run: |
         tox
