Run each Python version in a separate workflow

--- a/.github/workflows/python38.yml
+++ b/.github/workflows/python38.yml
@@ -1,4 +1,4 @@
-name: Tox
+name: Python 3.8
 
 on:
   push:
@@ -11,26 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.6'
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7'
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
     - name: Install tox
       run: |
         python -m pip install --upgrade pip
         python -m pip install tox
     - name: Run tox
       run: |
-        tox -p 5 -q
+        tox
