--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,11 @@ environment:
       PYTHON_ARCH: "32"
       TOX_ENV: "py38"
 
-    - PYTHON: "C:\\Python39"
-      PYTHON_VERSION: "3.9.1"
-      PYTHON_ARCH: "32"
-      TOX_ENV: "py39"
+    # NOT WORKING AS OF FEB 2021
+    # - PYTHON: "C:\\Python39"
+    #   PYTHON_VERSION: "3.9.1"
+    #   PYTHON_ARCH: "32"
+    #   TOX_ENV: "py39"
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
