Use --autoresolve for pip-compile-multi and in e2e tests

--- a/tox.ini
+++ b/tox.ini
@@ -39,8 +39,8 @@ basepython = python3.6
 usedevelop = True
 deps = -rrequirements/base.txt
 commands =
-    pip-compile-multi
-    pip-compile-multi -g local -i txt -o hash --allow-unsafe
+    pip-compile-multi --autoresolve -t requirements/local.in
+    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe
 
 [pytest]
 addopts = -vvvs --doctest-modules
