Use --autoresolve for pip-compile-multi and in e2e tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,12 +19,12 @@ replace = __version__ = '{new_version}'
 
 [requirements:Python 3]
 python = 3.6
-include_names = local, testwin
+include_names = local
 
 [requirements:Python 3 hash]
 python = 3.6
-include_names = local, testwin
-add_hashes = local, testwin
+include_names = local
+add_hashes = local
 in_ext = txt
 out_ext = hash
 
