--- a/tox.ini
+++ b/tox.ini
@@ -34,13 +34,21 @@ deps = pip-compile-multi
 commands = pip-compile-multi verify
 whitelist_externals = pip-compile-multi
 
+[testenv:lock]
+basepython = python3.6
+usedevelop = True
+deps = -rrequirements/base.hash
+commands =
+    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade
+    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade
+
 [testenv:upgrade]
 basepython = python3.6
 usedevelop = True
-deps = -rrequirements/base.txt
+deps = -rrequirements/base.hash
 commands =
     pip-compile-multi --autoresolve -t requirements/local.in
-    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe
+    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade
 
 [pytest]
 addopts = -vvvs --doctest-modules
