--- a/.github/workflows/python36.yml
+++ b/.github/workflows/python36.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install tox
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox
+        python -m pip install tox==3.26.0  # Last working version
     - name: Run tox
       run: |
         tox
