Lock requirements under Ubuntu Python 3.8

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters = true
 [testenv]
 platform = linux: linux
            windows: win32
+           darwin: darwin
 commands = python -m pytest --cov=pipcompilemulti --cov-branch --cov-report=html
 deps =
     linux: -r{toxinidir}/requirements/test.hash
