Skip Python 3.8 in workflow for 3.11

--- a/.github/workflows/python311.yml
+++ b/.github/workflows/python311.yml
@@ -21,4 +21,4 @@ jobs:
         python -m pip install tox
     - name: Run tox
       run: |
-        tox || true
+        tox -e py311-linux || true
