--- a/tox.ini
+++ b/tox.ini
@@ -40,16 +40,16 @@ basepython = python3.8
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade
-    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade
+    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade --skip-constraints
+    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
 
 [testenv:upgrade]
 basepython = python3.8
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in
-    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade
+    pip-compile-multi --autoresolve -t requirements/local.in --skip-constraints
+    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
 
 [pytest]
 addopts = -vvvs --doctest-modules
