--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,16 +9,14 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 
-# Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
-
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
-python:
-  version: 3.8
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
   install:
     - requirements: requirements/local.hash
     - method: pip
