--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,7 +17,7 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.8"
-  install:
-    - requirements: requirements/local.hash
-    - method: pip
-      path: .
+  commands:
+    - pip install -r requirements/local.hash
+    - pip install -e .
+    - make -C docs html || true
