--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ basepython = python3.9
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade --skip-constraints
+    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade --skip-constraints --allow-unsafe
     pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
 
 [testenv:upgrade]
