--- a/setup.cfg
+++ b/setup.cfg
@@ -18,11 +18,12 @@ search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
 [requirements:Python 3]
-python = 3.9
+python = 3.10
 include_names = local
+use_cache = True
 
 [requirements:Python 3 hash]
-python = 3.9
+python = 3.10
 include_names = local
 add_hashes = local
 in_ext = txt
