Disable option unsupported by uv when uv enabled

--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ basepython = python3.9
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade --skip-constraints --allow-unsafe
+    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade --skip-constraints --allow-unsafe --use-cache
     pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
 
 [testenv:upgrade]
@@ -48,7 +48,7 @@ basepython = python3.9
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in --skip-constraints --allow-unsafe
+    pip-compile-multi --autoresolve -t requirements/local.in --skip-constraints --allow-unsafe --use-cache
     pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
 
 [pytest]
