Brush up CLI v2 (requirements command)

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,15 +19,19 @@ replace = __version__ = '{new_version}'
 
 [requirements:Python 3]
 python = 3.10
-include_names = local
+autoresolve = True
+include_in_paths = requirements/local.in
+skip_constraints = True
+allow_unsafe = True
 use_cache = True
 
 [requirements:Python 3 hash]
 python = 3.10
-include_names = local
-add_hashes = local
+include_in_paths = requirements/local.txt
+generate_hashes = local
 in_ext = txt
 out_ext = hash
+use_cache = True
 
 [pycodestyle]
 max-line-length = 120
