Port tox.ini to CLI v2

--- a/tox.ini
+++ b/tox.ini
@@ -40,16 +40,14 @@ basepython = python3.9
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in --no-upgrade --skip-constraints --allow-unsafe --use-cache
-    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
+    requirements lock
 
 [testenv:upgrade]
 basepython = python3.9
 usedevelop = True
 deps = -rrequirements/base.hash
 commands =
-    pip-compile-multi --autoresolve -t requirements/local.in --skip-constraints --allow-unsafe --use-cache
-    pip-compile-multi -t requirements/local.txt -g local -i txt -o hash --allow-unsafe --no-upgrade --use-cache
+    requirements upgrade
 
 [pytest]
 addopts = -vvvs --doctest-modules
