--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
 [requirements:Python 3]
-python = 3.10
+python = 3.9
 autoresolve = True
 include_in_paths = requirements/local.in
 skip_constraints = True
@@ -26,11 +26,12 @@ allow_unsafe = True
 use_cache = True
 
 [requirements:Python 3 hash]
-python = 3.10
+python = 3.9
 include_in_paths = requirements/local.txt
 generate_hashes = local
 in_ext = txt
 out_ext = hash
+allow_unsafe = True
 use_cache = True
 
 [pycodestyle]
