Enable annotations for uv

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ include_in_paths = requirements/local.in
 skip_constraints = True
 allow_unsafe = True
 use_cache = True
+uv = True
 
 [requirements:Python 3 hash]
 python = 3.9
@@ -33,6 +34,7 @@ in_ext = txt
 out_ext = hash
 allow_unsafe = True
 use_cache = True
+uv = True
 
 [pycodestyle]
 max-line-length = 120
