--- a/tox.ini
+++ b/tox.ini
@@ -38,14 +38,14 @@ whitelist_externals = pip-compile-multi
 [testenv:lock]
 basepython = python3.9
 usedevelop = True
-deps = -rrequirements/base.hash
+deps = -rrequirements/test.hash
 commands =
     requirements lock
 
 [testenv:upgrade]
 basepython = python3.9
 usedevelop = True
-deps = -rrequirements/base.hash
+deps = -rrequirements/test.hash
 commands =
     requirements upgrade
 
